<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="49dp"
            android:layout_height="49dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/avatar" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname_lastname"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="20dp"
            card_view:layout_constraintStart_toEndOf="@+id/imgAvatar"
            card_view:layout_constraintTop_toTopOf="@+id/imgAvatar" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_email_com"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="4dp"
            android:layout_marginStart="20dp"
            card_view:layout_constraintStart_toEndOf="@+id/imgAvatar"
            card_view:layout_constraintTop_toBottomOf="@+id/tvName" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>